<resources>
    <string name="app_name">千金方</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register_newaccount">注册新账号</string>
    <string name="btn_register">注册</string>
    <string name="main_title_1">访庵庐</string>
    <string name="main_title_2">望杏林</string>
    <string name="main_title_3">开药方</string>
    <string name="main_container_title_1">一键帮您线上就医</string>
    <string name="main_container_title_2">医院导航不再迷路</string>
    <string name="main_container_title_3">诊断结果快速查看</string>
    <string name="main_container_content_1">最快速的绿色通道，解决您的挂号烦恼</string>
    <string name="main_container_content_2">最准确的方向引导，周边商铺一目了然</string>
    <string name="main_container_content_3">最便捷的报告查询，药品信息在线获取</string>
    <string name="navi_left">医院导航</string>
    <string name="navi_right">周边商铺</string>
    <string name="hosp_left">智能分诊</string>
    <string name="hosp_right">门诊查询</string>
    <string name="registration">挂号</string>
    <string name="doctor_return">返回首页</string>
    <string name="report_title">诊断报告单</string>
    <string name="patient_name">姓名：</string>
    <string name="patient_sex">性别：</string>
    <string name="patient_age">年龄：</string>
    <string name="office_name">申请科室：</string>
    <string name="doctor_name">主治医生：</string>
    <string name="diagnose_result">诊断结果</string>
    <string name="medicine_advice">建议用药</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="medicine_name">药品名称：</string>
    <string name="medicine_composition">成份：</string>
    <string name="medicine_indication">适应症：</string>
    <string name="medicine_usage">用法用量：</string>
    <string name="medicine_adverse_reaction">不良反应：</string>
    <string name="medicine_taboo">禁忌：</string>
    <string name="medicine_note">注意事项：</string>
    <string name="medicine_drug_interaction">药物相互作用：</string>
    <string name="medicine_approval_number">批准文号：</string>
    <string name="medicine_manufacturer">生产企业：</string>
    <string name="medicine_drug_classification">药物分类：</string>

</resources>
