<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/edit_login_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLength="11"
            android:hint="@string/hint_username"
            android:singleLine="true">
        </EditText>

        <EditText
            android:id="@+id/edit_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:imeOptions="actionDone"
            android:layout_marginTop="20dp"
            android:singleLine="true">
        </EditText>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_btn_green"
            android:text="@string/btn_login"
            android:onClick="onLoginClick"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btn_registerNewAccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/btn_register_newaccount"
            android:onClick="onRegisterNewAccountClick"
            android:background="@drawable/background_btn_gray"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>


</RelativeLayout>
